--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
                 <h1 class="sub-title">My Skills</h1>
                 <div class="skills-list">
                     <div>
-                        <img src="Images/Java-Logo.png" alt="Java">
+                        <img src="images/python-logo.png" alt="Java">
                         <img src="images/python-logo.png" alt="Python">
-                        <img src="Images/cpp.png" alt="C++">
+                        <img src="images/python-logo.png" alt="C++">
                         <img src="Images/c.png" alt="C">
                     </div>
                     <div>
