--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                         <img src="Images/nodejs.png" alt="Node JS">
                         <div>
                             <img src="Images/js.jpeg" alt="JavaScript">
-                            <img src="Images/html.jpg" alt="HTML">
+                            <img src="images/html new.jpeg" alt="HTML">
                             <img src="Images/css.png" alt="CSS">
                         </div>
                         <!-- <img src="Images/" alt="Express JS"> -->
