--- a/index.html
+++ b/index.html
@@ -118,21 +118,21 @@
                 <h1 class="sub-title">My Skills</h1>
                 <div class="skills-list">
                     <div>
-                        <img src="images/python-logo.png" alt="Java">
+                        <img src="images/java.png" alt="Java">
                         <img src="images/python-logo.png" alt="Python">
-                        <img src="images/python-logo.png" alt="C++">
-                        <img src="Images/c.png" alt="C">
+                        <img src="images/c++.jpeg" alt="C++">
+                        <img src="images/c.jpeg" alt="C">
                     </div>
                     <div>
-                        <img src="Images/tailwind.png" alt="Tailwind CSS">
-                        <img src="Images/nodejs.png" alt="Node JS">
+                        <img src="images/css.jpeg" alt="Tailwind CSS">
+                        <img src="images/NodeJS.png" alt="Node JS">
                         <div>
-                            <img src="Images/js.jpeg" alt="JavaScript">
+                            <img src="images/java script.png" alt="JavaScript">
                             <img src="images/html new.jpeg" alt="HTML">
-                            <img src="Images/css.png" alt="CSS">
+                            <img src="images/anaconda.jpeg" alt="Anaconda">
                         </div>
                         <!-- <img src="Images/" alt="Express JS"> -->
-                        <img src="Images/npm.png" alt="npm">
+                        <img src="images/npm.jpeg" alt="npm">
                     </div>
 
                 </div>
