--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <a href="https://wa.me/qr/BPZV4NK7LDADE1"><i class='bx bxl-whatsapp'></i></a>
 
             </div>
-            <a href="#" class="btn-box">More about Me</a>
+            <a href="#about" class="btn-box">More about Me</a>
         </div>
         <span class="home-imgHover"></span>
 
