--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <nav>
         <label class="logo" >Portfolio</label>
         <ul id="sidemenu">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#services">Education</a></li>
-            <li><a href="#My Projects">My Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#home" style="--i:1" class="active">Home</a></li>
+            <li><a href="#about" style="--i:2">About</a></li>
+            <li><a href="#skills" style="--i:3">Skills</a></li>
+            <li><a href="#services" style="--i:4">Education</a></li>
+            <li><a href="#My Projects" style="--i:5">My Projects</a></li>
+            <li><a href="#contact" style="--i:6">Contact</a></li>
             <i class='bx bx-hide' onclick="closemenu()"></i>
         </ul>
         <i class='bx bx-menu' onclick="openmenu()"></i>
@@ -37,10 +37,10 @@
             <!--<p>This time I'm a Fresher</p>
             expertise is to create and Web Devoloper, frontend Devoloper-->
             <div class="home-sci">
-                <a href="https://www.facebook.com/chatu.bera.33?mibextid=ZbWKwL"><i class='bx bxl-facebook-square'></i></a>
-                <a href="https://github.com/soumabera"><i class='bx bxl-github'></i></a>
-                <a href="https://x.com/Soumabera"><i class='bx bxl-twitter'></i></a>
-                <a href="https://wa.me/qr/BPZV4NK7LDADE1"><i class='bx bxl-whatsapp'></i></a>
+                <a href="https://www.facebook.com/chatu.bera.33?mibextid=ZbWKwL" style="--i:7"><i class='bx bxl-facebook-square'></i></a>
+                <a href="https://github.com/soumabera" style="--i:8"><i class='bx bxl-github'></i></a>
+                <a href="https://x.com/Soumabera" style="--i:9"><i class='bx bxl-twitter'></i></a>
+                <a href="https://wa.me/qr/BPZV4NK7LDADE1" style="--i:10"><i class='bx bxl-whatsapp'></i></a>
 
             </div>
             <a href="#about" class="btn-box">More about Me</a>
