--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
     function closemenu(){
         sidemenu.style.right = "-200px"
     }
-</script>-->
+</script>
     <script>
         const scriptURL = 'https://script.google.com/macros/s/AKfycbxQsysuaBk2GDzZDZC1sb9y7QLXIfSaEErC4BF6ceHY5IJotc8338vBHV6MIPRP1gL0/exec'
         const form = document.forms['submit-to-google-sheet']
